# runQTimerInQThread

./: .gitignore  README.txt
01-move2Thread/: CMakeLists.txt  README.txt
02-inheritFromQThread/timer_in_thread02/: CMakeLists.txt  README.TXT  main.cpp
